Productive Section (Incomplete)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
       <div class="wrapper">
         <header data-aos="fade-down" data-aos-duration="9000">
           <div class="headName">
-            <img src="https://cdn.discordapp.com/icons/1057726099079041065/d1e0bb915ffd1a7bdab9a047fc8c1cf3.png?size=1024" height="100vh" alt="asd" data-aos="fade" />
+            <img
+              src="https://cdn.discordapp.com/icons/1057726099079041065/d1e0bb915ffd1a7bdab9a047fc8c1cf3.png?size=1024"
+              height="100vh"
+              alt="asd"
+              data-aos="fade"
+            />
             <h1>GOHOSTZ</h1>
           </div>
           <div class="headLinks">
@@ -109,6 +114,76 @@
     </div>
     <div class="wrapper">
       <div class="features">
+        <svg
+          class="feaGra"
+          xmlns="http://www.w3.org/2000/svg"
+          width="800"
+          height="800"
+          fill="none"
+          viewBox="0 0 80 80"
+        >
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M28 28h24v24H28V28Zm1 1h22v22H29V29Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M24 24v32h32V24H24Zm31 1H25v30h30V25Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M20 20h40v40H20V20Zm1 1h38v38H21V21Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M16 16v48h48V16H16Zm47 1H17v46h46V17Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M12 12v56h56V12H12Zm55 1H13v54h54V13Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M23.03 40 40 23.03 56.97 40 40 56.97 23.03 40Zm1.414 0L40 24.444 55.556 40 40 55.556 24.444 40Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M17.373 40 40 62.627 62.627 40 40 17.373 17.373 40ZM40 18.787 18.787 40 40 61.213 61.213 40 40 18.787Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M11.716 40 40 11.716 68.284 40 40 68.284 11.716 40Zm1.414 0L40 13.13 66.87 40 40 66.87 13.13 40Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M6.059 40 40 73.941 73.941 40 40 6.059 6.059 40ZM40 7.473 7.473 40 40 72.527 72.527 40 40 7.473Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M.402 40 40 79.598 79.598 40 40 .402.402 40ZM40 1.816 1.816 40 40 78.184 78.184 40 40 1.816Z"
+            clip-rule="evenodd"
+          />
+        </svg>
+
         <div data-aos="fade-right" data-aos-duration="1000">
           <img src="./images/icon-access-anywhere.svg" alt="features" />
           <h1>Access your files, anywhere</h1>
@@ -144,7 +219,30 @@
         </div>
       </div>
     </div>
-    <div class="" style="height: 100vh"></div>
+    <div class="wrapper">
+      <div class="stayProductive">
+        <div class="stayLeft">
+          <img
+            src="./images/illustration-stay-productive.png"
+            alt="Illustration"
+          />
+        </div>
+        <div class="stayRight">
+          <h1>STAY PRODUCTIVE, WHERE EVER YOU GO</h1>
+          <h3>
+            <br />
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs.
+            <br /><br />
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required.
+            <br />
+            <br />
+            <span> See how Fylo works → </span>
+          </h3>
+        </div>
+      </div>
+    </div>
     <!-- 
 
 
