--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       Frontend Mentor | Fylo landing page with dark theme and features grid
     </title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./header.css" />
-    <link rel="stylesheet" href="./responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css"
+    />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
@@ -115,73 +117,73 @@
     </div>
     <div class="wrapper">
       <div class="features">
-          <svg
-            class="feaGra"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 80 80"
-          >
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M28 28h24v24H28V28Zm1 1h22v22H29V29Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M24 24v32h32V24H24Zm31 1H25v30h30V25Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M20 20h40v40H20V20Zm1 1h38v38H21V21Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M16 16v48h48V16H16Zm47 1H17v46h46V17Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M12 12v56h56V12H12Zm55 1H13v54h54V13Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M23.03 40 40 23.03 56.97 40 40 56.97 23.03 40Zm1.414 0L40 24.444 55.556 40 40 55.556 24.444 40Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M17.373 40 40 62.627 62.627 40 40 17.373 17.373 40ZM40 18.787 18.787 40 40 61.213 61.213 40 40 18.787Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M11.716 40 40 11.716 68.284 40 40 68.284 11.716 40Zm1.414 0L40 13.13 66.87 40 40 66.87 13.13 40Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M6.059 40 40 73.941 73.941 40 40 6.059 6.059 40ZM40 7.473 7.473 40 40 72.527 72.527 40 40 7.473Z"
-              clip-rule="evenodd"
-            />
-            <path
-              fill="#fff"
-              fill-rule="evenodd"
-              d="M.402 40 40 79.598 79.598 40 40 .402.402 40ZM40 1.816 1.816 40 40 78.184 78.184 40 40 1.816Z"
-              clip-rule="evenodd"
-            />
-          </svg>
+        <svg
+          class="feaGra"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 80 80"
+        >
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M28 28h24v24H28V28Zm1 1h22v22H29V29Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M24 24v32h32V24H24Zm31 1H25v30h30V25Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M20 20h40v40H20V20Zm1 1h38v38H21V21Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M16 16v48h48V16H16Zm47 1H17v46h46V17Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M12 12v56h56V12H12Zm55 1H13v54h54V13Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M23.03 40 40 23.03 56.97 40 40 56.97 23.03 40Zm1.414 0L40 24.444 55.556 40 40 55.556 24.444 40Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M17.373 40 40 62.627 62.627 40 40 17.373 17.373 40ZM40 18.787 18.787 40 40 61.213 61.213 40 40 18.787Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M11.716 40 40 11.716 68.284 40 40 68.284 11.716 40Zm1.414 0L40 13.13 66.87 40 40 66.87 13.13 40Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M6.059 40 40 73.941 73.941 40 40 6.059 6.059 40ZM40 7.473 7.473 40 40 72.527 72.527 40 40 7.473Z"
+            clip-rule="evenodd"
+          />
+          <path
+            fill="#fff"
+            fill-rule="evenodd"
+            d="M.402 40 40 79.598 79.598 40 40 .402.402 40ZM40 1.816 1.816 40 40 78.184 78.184 40 40 1.816Z"
+            clip-rule="evenodd"
+          />
+        </svg>
         <div data-aos="fade-right" data-aos-duration="1000">
           <img src="./images/icon-access-anywhere.svg" alt="features" />
           <h1>Access your files, anywhere</h1>
@@ -249,7 +251,13 @@
     <div class="wrapper">
       <div class="testimony">
         <div data-aos="fade-right" data-aos-duration="1000">
-          <img data-aos="fade-down" data-aos-duration="1000" class="testiGra" src="./images/bg-quotes.png" alt="quotes">
+          <img
+            data-aos="fade-down"
+            data-aos-duration="1000"
+            class="testiGra"
+            src="./images/bg-quotes.png"
+            alt="quotes"
+          />
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus
             nesciunt reprehenderit fuga hic unde est nulla sunt sapiente
@@ -292,6 +300,71 @@
               ><h1>Satish</h1>
               <h3>Founder @ Google</h3></span
             >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper" style="background: #0c1524; width: 100%; padding: 0">
+      <div class="footer">
+        <div class="footleft">
+          <div>
+            <img
+              src="https://cdn.discordapp.com/icons/1057726099079041065/d1e0bb915ffd1a7bdab9a047fc8c1cf3.png?size=1024"
+              height="60vw"
+            />
+            <h1>GOHOSTZ</h1>
+          </div>
+          <div style="align-items: flex-start">
+            <i class="fa-thin fa-location-dot"></i>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+            </p>
+          </div>
+        </div>
+        <div class="footright">
+          <div>
+            <li><i class="fa-thin fa-phone-office"></i> +1-531-1232</li>
+            <li><i class="fa-thin fa-envelope"></i> random@mail.org</li>
+          </div>
+          <div>
+            <li>About us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+          </div>
+          <div>
+            <li>Contact us</li>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </div>
+        </div>
+      </div>
+      <div class="footerMob">
+        <img
+          src="https://cdn.discordapp.com/icons/1057726099079041065/d1e0bb915ffd1a7bdab9a047fc8c1cf3.png?size=1024"
+        />
+        <h1>GOHOSTZ</h1>
+        <li>
+          <i class="fa-thin fa-location-dot"></i>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </p>
+        </li>
+        <li><i class="fa-thin fa-phone-office"></i> +1-531-1232</li>
+        <li><i class="fa-thin fa-envelope"></i> random@mail.org</li>
+        <div class="footlinks">
+          <div>
+            <li>About us</li>
+            <li>Jobs</li>
+            <li>Press</li>
+            <li>Blog</li>
+          </div>
+          <div>
+            <li>Contact Us</li>
+            <li>Terms</li>
+            <li>Privacy</li>
           </div>
         </div>
       </div>
@@ -344,8 +417,7 @@
 
   Get Started For Free
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna aliqua
+
 
   +1-543-123-4567
   example@fylo.com
